--- a/index.html
+++ b/index.html
@@ -2,10 +2,18 @@
 <html>
 
 <head>
-	<title></title>
+	<link rel="stylesheet" type="text/css" href="style.css">
+	<title>Survey Form</title>
 </head>
 
 <body>
+	<h1 id="title">freeCodeCamp Survey Form</h1>
+	<p id="description">Thank you for taking the time to help us improve the platform</p>
+	<form id="survey-form">
+		<input type="text" id="name" name="name">
+		<input type="email" id="email" name="email">
+		<input type="number" id="number" name="number">
+	</form>
 </body>
 
 </html>
